--- a/ICT web/Science.html
+++ b/ICT web/Science.html
@@ -40,7 +40,7 @@ div{overflow: auto;}
        <br><br>
        <div style="width: 100%;">
               <div style="width: 45%; float: left; background-color: lavenderblush;margin-left:50px">
-                     <center><img src="resources/Science tr.jpg" width="45%" style=" margin-top: 20px;"></center>
+                     <center><img src="resources/Science tr.JPG" width="45%" style=" margin-top: 20px;"></center>
                      <h4 style="text-align: center; color: darkmagenta; font-family: impact;background-color: lavender;">Chan Myae Aung</h4>
                      <h4 style=" text-align: center; color: darkmagenta; font-family:cursive;background-color: lavender;">Lower Secondary Science head and class7M Teacher</h4>
               </div>
